--- a/humanpatterns.ui
+++ b/humanpatterns.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>1059</width>
     <height>600</height>
    </rect>
   </property>
@@ -63,13 +63,39 @@
      <string>Camera (RTSP address):</string>
     </property>
    </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>800</x>
+      <y>10</y>
+      <width>131</width>
+      <height>54</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QCheckBox" name="showMarkersCheckBox">
+       <property name="text">
+        <string>Show Markers</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="showPlayAreaCheckBox">
+       <property name="text">
+        <string>Show Play Area</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1059</width>
      <height>22</height>
     </rect>
    </property>
