--- a/humanpatterns.ui
+++ b/humanpatterns.ui
@@ -139,7 +139,7 @@ Playarea</string>
      </layout>
     </widget>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>800</x>
@@ -176,6 +176,26 @@ Playarea</string>
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QPushButton" name="launchGameDisplay">
+    <property name="geometry">
+     <rect>
+      <x>890</x>
+      <y>320</y>
+      <width>119</width>
+      <height>42</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="text">
+     <string>Launch
+Game Display</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
