--- a/humanpatterns.ui
+++ b/humanpatterns.ui
@@ -197,6 +197,26 @@ Playarea</string>
 Game Display</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="saveBaseline">
+    <property name="geometry">
+     <rect>
+      <x>890</x>
+      <y>270</y>
+      <width>119</width>
+      <height>42</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="text">
+     <string>Save
+Baseline</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
