--- a/humanpatterns.ui
+++ b/humanpatterns.ui
@@ -15,10 +15,32 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="3" column="0" colspan="3">
+    <item row="0" column="0" rowspan="6" colspan="6">
+     <widget class="QGraphicsView" name="graphicsView">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="1">
      <layout class="QHBoxLayout" name="scoreBar">
       <item>
        <widget class="QLCDNumber" name="scorePos">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="styleSheet">
          <string notr="true">background: rgb(133, 181, 215) </string>
         </property>
@@ -26,6 +48,12 @@
       </item>
       <item>
        <widget class="QLCDNumber" name="scoreNeg">
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="styleSheet">
          <string notr="true">background: rgb(232, 193, 193)</string>
         </property>
@@ -33,6 +61,12 @@
       </item>
       <item>
        <widget class="QLCDNumber" name="scoreQuality">
+        <property name="minimumSize">
+         <size>
+          <width>100</width>
+          <height>0</height>
+         </size>
+        </property>
         <property name="autoFillBackground">
          <bool>false</bool>
         </property>
@@ -43,21 +77,7 @@
       </item>
      </layout>
     </item>
-    <item row="2" column="4">
-     <widget class="QPushButton" name="saveBaseline">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="text">
-       <string>Save
-Baseline</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="4">
+    <item row="0" column="6">
      <widget class="QGroupBox" name="captureGroup">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -78,7 +98,7 @@ Baseline</string>
        </size>
       </property>
       <property name="title">
-       <string>Capture Controls</string>
+       <string>Capture</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_2">
        <item row="0" column="0">
@@ -127,7 +147,14 @@ Playarea</string>
       </layout>
      </widget>
     </item>
-    <item row="4" column="4">
+    <item row="1" column="6">
+     <widget class="QGroupBox" name="groupBox">
+      <property name="title">
+       <string>Calibration</string>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="6">
      <layout class="QHBoxLayout" name="patternLayout">
       <item>
        <widget class="QPushButton" name="patternButton">
@@ -157,27 +184,10 @@ Playarea</string>
       </item>
      </layout>
     </item>
-    <item row="4" column="0">
-     <widget class="QLabel" name="cameraLabel">
-      <property name="text">
-       <string>Camera (RTSP address):</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0" rowspan="3" colspan="4">
-     <widget class="QGraphicsView" name="graphicsView">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="3" rowspan="2">
+    <item row="6" column="4">
      <widget class="QPushButton" name="startButton">
       <property name="sizePolicy">
-       <sizepolicy hsizetype="Maximum" vsizetype="Preferred">
+       <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
@@ -185,13 +195,13 @@ Playarea</string>
       <property name="minimumSize">
        <size>
         <width>80</width>
-        <height>0</height>
+        <height>80</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>80</width>
-        <height>16777215</height>
+        <height>80</height>
        </size>
       </property>
       <property name="styleSheet">
@@ -203,25 +213,89 @@ Playarea</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="4">
-     <widget class="QPushButton" name="launchGameDisplay">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
+    <item row="6" column="2">
+     <layout class="QGridLayout" name="gridLayout_3">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetMaximumSize</enum>
       </property>
-      <property name="text">
-       <string>Launch
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="videoSourceEdit">
+        <property name="text">
+         <string>rtsp://192.168.0.111:554/12</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="gameDirectoryEdit"/>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="gameDirectoryLabel">
+        <property name="text">
+         <string>Game Directory:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLabel" name="videoSourceLabel">
+        <property name="text">
+         <string>Camera (RTSP address):</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="2" column="6" rowspan="2">
+     <widget class="QGroupBox" name="groupBox_2">
+      <property name="title">
+       <string>Game</string>
+      </property>
+      <widget class="QPushButton" name="launchGameDisplay">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>20</y>
+         <width>131</width>
+         <height>51</height>
+        </rect>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Launch a
 Game Display</string>
-      </property>
+       </property>
+      </widget>
      </widget>
     </item>
-    <item row="4" column="1" colspan="2">
-     <widget class="QLineEdit" name="videoEdit">
-      <property name="text">
-       <string>rtsp://192.168.0.111:554/12</string>
+    <item row="4" column="6" rowspan="2">
+     <widget class="QGroupBox" name="groupBox_3">
+      <property name="title">
+       <string>Debug</string>
       </property>
+      <widget class="QPushButton" name="saveBaseline">
+       <property name="geometry">
+        <rect>
+         <x>180</x>
+         <y>30</y>
+         <width>91</width>
+         <height>42</height>
+        </rect>
+       </property>
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Save
+Baseline</string>
+       </property>
+      </widget>
      </widget>
     </item>
    </layout>
