--- a/humanpatterns.ui
+++ b/humanpatterns.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1035</width>
-    <height>696</height>
+    <height>715</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -85,21 +85,14 @@
        <string>Calibration</string>
       </property>
       <layout class="QGridLayout" name="gridLayout_6">
-       <item row="1" column="0">
+       <item row="1" column="1">
         <widget class="QLabel" name="threshLabel">
          <property name="text">
           <string>Thresh YY</string>
          </property>
         </widget>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="blurLabel">
-         <property name="text">
-          <string>Blur XX</string>
-         </property>
-        </widget>
-       </item>
-       <item row="1" column="1" colspan="3">
+       <item row="1" column="2" colspan="3">
         <widget class="QSlider" name="threshSlider">
          <property name="minimum">
           <number>1</number>
@@ -118,7 +111,14 @@
          </property>
         </widget>
        </item>
-       <item row="0" column="1" colspan="3">
+       <item row="0" column="1">
+        <widget class="QLabel" name="blurLabel">
+         <property name="text">
+          <string>Blur XX</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2" colspan="3">
         <widget class="QSlider" name="blurSlider">
          <property name="minimum">
           <number>1</number>
@@ -140,6 +140,19 @@
          </property>
          <property name="invertedAppearance">
           <bool>false</bool>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QPushButton" name="rotationButton">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="text">
+          <string>Rot Z</string>
          </property>
         </widget>
        </item>
