--- a/humanpatterns.ui
+++ b/humanpatterns.ui
@@ -324,8 +324,11 @@ Baseline</string>
       </property>
       <item row="1" column="1">
        <widget class="QLineEdit" name="videoSourceEdit">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="text">
-         <string>rtsp://192.168.0.111:554/11</string>
+         <string>&lt;address&gt;</string>
         </property>
        </widget>
       </item>
@@ -333,6 +336,9 @@ Baseline</string>
        <widget class="QLineEdit" name="gameDirectoryEdit">
         <property name="enabled">
          <bool>false</bool>
+        </property>
+        <property name="text">
+         <string>&lt;dir&gt;</string>
         </property>
         <property name="readOnly">
          <bool>true</bool>
