--- a/humanpatterns.ui
+++ b/humanpatterns.ui
@@ -330,6 +330,9 @@ Baseline</string>
         <property name="text">
          <string>&lt;address&gt;</string>
         </property>
+        <property name="readOnly">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="0" column="1">
